force-app/main/default/objects/CHECKLIST__c/CHECKLIST__c.object-meta.xml
<CustomObject>
    <label>CHECKLIST</label>
    <nameField>
        <label>CHECKLIST</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CHECKLIST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>