force-app/main/default/objects/CHECKLIST__c/fields/CLAUSULA__c.field-meta.xml
<CustomField>
    <fullName>CLAUSULA__c</fullName>
    <label>CLAUSULA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>