force-app/main/default/objects/CHECKLIST__c/fields/ENTIDAD__c.field-meta.xml
<CustomField>
    <fullName>ENTIDAD__c</fullName>
    <label>ENTIDAD ORIGINARIA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>