force-app/main/default/objects/CHECKLIST__c/fields/INFORME_1__c.field-meta.xml
<CustomField>
    <fullName>INFORME_1__c</fullName>
    <label>INFORME 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>