force-app/main/default/objects/CHECKLIST__c/fields/INFORME_2__c.field-meta.xml
<CustomField>
    <fullName>INFORME_2__c</fullName>
    <label>INFORME 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>