force-app/main/default/objects/CHECKLIST__c/fields/LITERAL__c.field-meta.xml
<CustomField>
    <fullName>LITERAL__c</fullName>
    <label>LITERAL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>