force-app/main/default/objects/CHECKLIST__c/fields/PRODUCTO__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTO__c</fullName>
    <label>PRODUCTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>