force-app/main/default/objects/CHECKLIST__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PRODUCTO__c</columns>
    <columns>ENTIDAD__c</columns>
    <columns>Entidad_Actual__c</columns>
    <columns>CLAUSULA__c</columns>
    <columns>LOCALIZACION__c</columns>
    <columns>LITERAL__c</columns>
    <columns>INFORME_1__c</columns>
    <columns>INFORME_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los registros</label>
</ListView>